--- a/report/main.tex
+++ b/report/main.tex
@@ -158,24 +158,24 @@ sufficient to set the parameters $N$, $N_{W}$, and $N_{R}$ such that:
 \end{align*}
 
 \subsection{Concurrent Transactions}
-Concurrent operations may affect the system right behavior. Write/write 
-conflicts may cause inconsistency: responsible nodes may have different values 
-and same version for a data item. Read/write conflicts may break sequential 
-consistency.
+Concurrent operations could affect the system's behavior. Write/write
+conflicts could cause inconsistency: responsible nodes could have the same version
+but different values for for same data item. Read/write conflicts could break
+sequential consistency.
 
 We manage these conflicts in the following way:
 \begin{itemize}
     \item write/write conflicts: the set transaction fails if the responsible 
     nodes for it are managing other write operations. When a node receives 
-    a version request for a data item, it locks the data item's key and only 
-    when the set transaction ends, the node frees it (see messages of set 
-    operation in figure \textbf{Fig.\ref{fig:messages}}). 
-    \\In some corner cases, it may happen that all concurrent write 
-    operations fail. This behavior is given by the design choice of concurrent 
-    requests' management system: to avoid the risk that a concurrent transaction 
-    violates the system, we block it immediately.
-    \item read/write conflicts: the get transactions fail if responsible 
-    nodes are participating in a set operation on the same data item. If the 
+    a version request for a data item, it locks that item's key, and it no longer
+    participates in any set operation on that item.
+    The key is only freed when the related transaction ends (see messages of
+    \texttt{set} operation in \textbf{Fig.\ref{fig:messages}}). \\
+    In some corner cases it may happen that all concurrent write operations fail.
+    This behaviour occurs when none of the concurrent write operations manages to
+    secure enough nodes for a quorum.
+    \item read/write conflicts: the get transactions fail if the responsible
+    nodes are participating in a set operation on the same data item. If the
     key is locked, the node does not continue performing the read operation.
 \end{itemize}
 
